--- a/p8105_hw6_jsg2145.Rmd
+++ b/p8105_hw6_jsg2145.Rmd
@@ -7,6 +7,7 @@ output: html_document
 
 ```{r setup, include=FALSE}
 library(tidyverse)
+library(modelr)
 library(viridis)
 knitr::opts_chunk$set(
 	echo = TRUE,
@@ -26,8 +27,93 @@ theme_set(theme_minimal() + theme(legend.position = "bottom"))
 
 ```{r}
 birthweight <- read_csv("./birthweight.csv") %>% 
-  janitor::clean_names()
+  janitor::clean_names() %>% 
+  mutate(babysex = as.factor(babysex),
+         frace = as.factor(frace),
+         mrace = as.factor(mrace),
+         malform = as.factor(malform),
+         )
 ```
+
+```{r}
+cross_df <- crossv_mc(birthweight, 100)
+cross_df <- cross_df %>% 
+  mutate(
+    train = map(train, as_tibble),
+    test = map(test, as_tibble))
+```
+
+```{r}
+cross_results <- cross_df %>% 
+  mutate(linear_mod  = map(train, ~lm(bwt ~ ., data = .x)),
+         linear_mod_s = map(train, ~lm(bwt ~ . -pnumlbw -pnumsga -wtgain -ppwt -mheight, data = birthweight)),
+         rmse_linear = map2_dbl(.x = linear_mod, .y = test, ~rmse(.x, .y)),
+         rmse_linear_s = map2_dbl(.x = linear_mod_s, .y = test, ~rmse(.x, .y)))
+```
+
+```{r}
+cross_results %>% 
+  select(starts_with("rmse")) %>% 
+  pivot_longer(
+    everything(),
+    names_to = "model", 
+    values_to = "rmse",
+    names_prefix = "rmse_") %>% 
+  mutate(model = fct_inorder(model)) %>% 
+  ggplot(aes(x = model, y = rmse)) + geom_violin()
+```
+```{r}
+birthweight_df =
+  birthweight %>% 
+  mutate(bwt_low = (bwt > 2500) * (bwt - 2500))
+```
+
+```{r}
+pwl_mod = lm(bwt + bwt_low ~ . -pnumlbw -pnumsga -wtgain -ppwt -mheight, data = birthweight_df)
+linear_mod = lm(bwt ~ . -pnumlbw -pnumsga -wtgain -ppwt -mheight, data = birthweight_df)
+
+```
+
+```{r}
+pwl_df =
+  crossv_mc(birthweight_df, 100) %>% 
+  mutate(
+    train = map(train, as_tibble),
+    test = map(test, as_tibble))
+```
+
+```{r}
+pwl_df = 
+  pwl_df %>% 
+  mutate(linear_mod  = map(train, ~lm(bwt ~ . -pnumlbw -pnumsga -wtgain -ppwt -mheight, data = .x)),
+         pwl_mod     = map(train, ~lm(bwt + bwt_low ~ . -pnumlbw -pnumsga -wtgain -ppwt -mheight, data = .x)),
+         rmse_linear = map2_dbl(linear_mod, test, ~rmse(model = .x, data = .y)),
+         rmse_pwl    = map2_dbl(pwl_mod, test, ~rmse(model = .x, data = .y)))
+```
+
+```{r, eval = FALSE}
+pwl_df %>%
+  gather_predictions(linear_mod, pwl_mod) %>% 
+  mutate(model = fct_inorder(model)) %>% 
+  ggplot(aes(x = babysex, y = bwt)) + 
+  geom_point(alpha = .5) +
+  geom_line(aes(y = pred), color = "red") + 
+  facet_grid(~model)
+```
+
+
+```{r}
+pwl_df %>% 
+  select(starts_with("rmse")) %>% 
+pivot_longer(
+    everything(),
+    names_to = "model", 
+    values_to = "rmse",
+    names_prefix = "rmse_") %>% 
+  mutate(model = fct_inorder(model)) %>% 
+  ggplot(aes(x = model, y = rmse)) + geom_violin()
+```
+
 
 ```{r}
 model1 <- rpart::rpart(bwt ~ ., data = birthweight)
@@ -36,12 +122,38 @@ rpart::rsq.rpart(model1)
 ```
 
 ```{r}
-fit1 <- lm(bwt ~ ., data = birthweight)
+fit1 <- lm(bwt ~ . -pnumlbw -pnumsga -wtgain -ppwt -mheight, data = birthweight)
+fit_mod <- lm(bwt ~ babysex + bhead + blength + delwt + fincome + gaweeks + 
+    momage + mrace + parity + smoken, data = birthweight)
 step <- MASS::stepAIC(fit1)
 selectedmodel <- step(fit1)
 ```
 
 ```{r}
+alias(fit1)
+```
+
+
+```{r}
+car::vif(fit1)
+```
+
+
+```{r}
 summary(selectedmodel)
+```
+
+```{r}
+birthweight %>% 
+  ggplot(aes(x = babysex + bhead + blength + delwt + fincome + gaweeks + 
+    momage + mrace + parity + smoken, y = bwt)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = FALSE)
+```
+
+```{r}
+birthweight %>% 
+  ggplot(aes(x= bwt)) +
+  geom_histogram()
 ```
 
