--- a/p8105_hw6_jsg2145.md
+++ b/p8105_hw6_jsg2145.md
@@ -205,7 +205,7 @@ weather_df =
 set.seed(1)
 
 boot_df <- weather_df %>% 
-  bootstrap(n = 100) %>% 
+  bootstrap(n = 5000) %>% 
   mutate(
     models = map(strap, ~lm(tmax ~ tmin, data = .x) ),
     results = map(models, broom::glance),
@@ -224,7 +224,7 @@ boot_df %>%
 
 <img src="p8105_hw6_jsg2145_files/figure-gfm/unnamed-chunk-19-1.png" width="90%" />
 
-The 95% confidence interval of the r-squared estimates is (0.9, 0.93).
+The 95% confidence interval of the r-squared estimates is (0.89, 0.93).
 
 ``` r
 boot_df %>% 
@@ -245,3 +245,9 @@ boot_df %>%
 
 The 95% confidence interval of the log of the product of
 \(\hat{\beta_0}\) and \(\hat{\beta_1}\) is (1.96, 2.06)
+
+The distribution of the r-squared and logs of the products are fairly
+normal, as would be expected
+
+from a large sample size, since our sample data was bootstrapped 5000
+times.
